# vector_quantizer

./: .gitignore  .gptignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: pq_bench.rs
plots/: main.py
src/: errors.rs  lib.rs  pq.rs  pq_residual.rs  utils.rs
